[gd_scene load_steps=5 format=3 uid="uid://u6w1w68im386"]

[ext_resource type="Texture2D" uid="uid://u5s2eylugora" path="res://Image/speech.png" id="1_155gw"]
[ext_resource type="Theme" uid="uid://ciciv61w8qmyy" path="res://Theme/MainTheme.tres" id="1_rm4wh"]
[ext_resource type="Script" path="res://Script/Dialog/WaypointDialog.gd" id="2_xflw2"]
[ext_resource type="Texture2D" uid="uid://cp2w2n37hv380" path="res://Image/speech_stop.png" id="4_8muf5"]

[node name="WaypointDialog" type="AcceptDialog"]
process_mode = 3
position = Vector2i(0, 36)
size = Vector2i(600, 600)
visible = true
theme = ExtResource("1_rm4wh")
script = ExtResource("2_xflw2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 592.0
offset_bottom = 542.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TTSButtonHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2

[node name="TTSButtonStop" type="Button" parent="VBoxContainer/TTSButtonHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "STOPTTS"
icon = ExtResource("4_8muf5")
icon_alignment = 2

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TTSButtonHBoxContainer"]
layout_mode = 2

[node name="TTSButtonStart" type="Button" parent="VBoxContainer/TTSButtonHBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "READTTS"
icon = ExtResource("1_155gw")
icon_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/TTSButtonHBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DialogTabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="TravelDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/TravelDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/TravelDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "TRAVEL001"
autowrap_mode = 3

[node name="EarthDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/EarthDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG001"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label2" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG002"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label3" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG003"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label4" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG004"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label5" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG005"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label6" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialogSub"
text = "DIALOG006"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label7" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG007"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label8" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialogSub"
text = "DIALOG008"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Label9" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG009"
vertical_alignment = 1
autowrap_mode = 3

[node name="Label10" type="Label" parent="VBoxContainer/DialogTabContainer/EarthDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG010"
vertical_alignment = 1
autowrap_mode = 3

[node name="MoonDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/MoonDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/MoonDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG011"
autowrap_mode = 3

[node name="Label2" type="Label" parent="VBoxContainer/DialogTabContainer/MoonDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG012"
autowrap_mode = 3

[node name="Label3" type="Label" parent="VBoxContainer/DialogTabContainer/MoonDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG013"
autowrap_mode = 3

[node name="Label4" type="Label" parent="VBoxContainer/DialogTabContainer/MoonDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG014"
autowrap_mode = 3

[node name="Label5" type="Label" parent="VBoxContainer/DialogTabContainer/MoonDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG015"
autowrap_mode = 3

[node name="MarsDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/MarsDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/MarsDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG021"
autowrap_mode = 3

[node name="Label2" type="Label" parent="VBoxContainer/DialogTabContainer/MarsDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG022"
autowrap_mode = 3

[node name="Label3" type="Label" parent="VBoxContainer/DialogTabContainer/MarsDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG023"
autowrap_mode = 3

[node name="Label4" type="Label" parent="VBoxContainer/DialogTabContainer/MarsDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG024"
autowrap_mode = 3

[node name="EuropaDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/EuropaDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/EuropaDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG031"
autowrap_mode = 3

[node name="KuiperBeltDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/KuiperBeltDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/KuiperBeltDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG041"
autowrap_mode = 3

[node name="Wolf1061cDialog" type="ScrollContainer" parent="VBoxContainer/DialogTabContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/DialogTabContainer/Wolf1061cDialog"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/DialogTabContainer/Wolf1061cDialog/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"SpokenDialog"
text = "DIALOG051"
autowrap_mode = 3
